GNOME Bugzilla – Bug 724055
High dpi scaling does not work
Last modified: 2014-02-14 14:36:24 UTC
<drago01> hadess: totem seems to fail to render videos on high dpi <drago01> hadess: only seeing the video in the upper quarter of the screen <drago01> hadess: setting CLUTTER_SCALE just makes it show in the lower half <hadess> drago01, i don't have the hardware to test it <hadess> it's likely that clutter-gtk/clutter-gst need patches... <drago01> hadess: you don't really need hardware to test that ... setting the scale factor to 2 should be the same <drago01> there was/is an env var just can't remember its name <drago01> ebassi: ? <hadess> drago01, it's a gsetting actually <drago01> hadess: I know that there is one but it affects all apps the env var would be limited to one app <ebassi> if your resolution is too small, the shell will maximize by default, which is annoying when testing <drago01> hidpi seems to work pretty well some apps are "broken" but overall its useable <ebassi> `GDK_SCALE=2 CLUTTER_SCALE=2 ./gtk-clutter-test-actor` in clutter-gtk/examples seems to work <drago01> ah gdk_scale <ebassi> it's a bit off in terms of alignment, I'll have to double check * drago01 tried gtk_scale <ebassi> the event handling is borked <drago01> yes with gdk_scale=! totem works <drago01> (the video, the ui is smaller though) <drago01> same for cheese <drago01> so yeah probably a clutter-gtk bug
Created attachment 269119 [details] [review] GtkClutterEmbed: Scale allocation by the scale factor
Attachment 269119 [details] pushed as 15a1e9e - GtkClutterEmbed: Scale allocation by the scale factor Pushed after IRC review.
<drago01> ok totem seems to work <drago01> or not <ebassi> heh <drago01> ebassi: seems to have the same problems as gtk-clutter-test-actor <drago01> ebassi: once I resize the window it gets crazy
Created attachment 269122 [details] [review] GtkClutterEmbedded: Don't pass scaled values to gdk_window_move_resize
Created attachment 269123 [details] [review] embed: Pass scaled size back to clutter Instead of messing with the allocation leave it as is and send the scaled size to clutter in the synthetic XConfigureEvent.
Attachment 269123 [details] pushed as 2edce83 - embed: Pass scaled size back to clutter OK, know it is really fixed ;)