GtkClutterEmbed: Scale allocation by the scale factor

https://bugzilla.gnome.org/show_bug.cgi?id=724055